fix: disable horizontal scroll on body

--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,7 @@
 body {
   /* slate-900 */
   background-color: var(--color-slate-900);
+  overflow-x: hidden;
 }
 
 html {
